--- a/section-07-ci-and-publishing/house-prices-api/requirements.txt
+++ b/section-07-ci-and-publishing/house-prices-api/requirements.txt
@@ -1,7 +1,7 @@
 --extra-index-url=${PIP_EXTRA_INDEX_URL}
 
 uvicorn>=0.11.3,<0.12.0
-fastapi>=0.64.0,<1.0.0
+fastapi==0.75
 python-multipart>=0.0.5,<0.1.0
 pydantic>=1.8.1,<1.9.0
 typing_extensions>=3.7.4,<3.8.0
