--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -311,7 +311,7 @@ workflows:
           filters:
             branches:
               only:
-                - master
+                - example-docker
 
 #  test-all:
 #    jobs:
