--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -297,6 +297,11 @@ workflows:
   section_07:
     jobs:
       - section_07_test_app
+        filters:
+          branches:
+            only:
+              - example-pr
+              - master
       - section_07_deploy_app_to_heroku:
           requires:
             - section_07_test_app
