--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -296,7 +296,7 @@ workflows:
   version: 2
   section_07:
     jobs:
-      - section_07_test_app
+      - section_07_test_app:
           filters:
             branches:
               only:
